--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -549,7 +549,7 @@
 
                             </li>
                             <li class="subMenu">
-                                <a href="Release" class="heading"><span class="numbers">2.</span> Release Notes</a>
+                                <a href="#ReleaseNotes" class="heading"><span class="numbers">2.</span> Release Notes</a>
                                 <ul class="collapse list-unstyled collapse-1">
                                     <li><a class="child 1" href="#Patches"><span class="numbers">2.1</span> Patches & Updates</a></li>
                                     <li><a class="child 1" href="#What"><span class="numbers">2.2</span> What's New</a></li>
@@ -787,8 +787,8 @@
                                 <h4 class="purple">1.</span> About Techforce.ai RPA</h4>
                           </div>
 
-                          <div id="Release"  class="page-section">
-                                  <h4 class="purple">2.</span> Release Notes</h4>
+                          <div id="ReleaseNotes"  class="page-section">
+                                  <h3>2.</span> Release Notes</h3>
                             </div>
 
                             <div id="Patches"  class="page-section">
@@ -2136,27 +2136,7 @@
 
                            <div id="Login"  class="page-section">
                              <h4 class="skyBlue">4.2 Login</h4>
-                             <p>1. To Register into eManager-Console, go to the below link,<a href="https://emc.techforce.ai/try/signup?subscriptionId=0, ">https://emc.techforce.ai/try/signup?subscriptionId=0, </a>the following Sign Up page will be displayed.</p>
-                             <img src="{{ '/assets/images/doc-img49.png' | relative_url }}"alt="image" style="width:400px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
-                             <p>2.	Enter the details and click on the Register button, and a mail will be sent to the registered email id for verification purpose.</p>
-                             <img src="{{ '/assets/images/doc-img50.png' | relative_url }}"alt="image" class="topImg" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
-                             <p>3.	Click on the link and will be redirected to the eManager-console login page.</p>
-                             <img src="{{ '/assets/images/doc-img51.png' | relative_url }}"alt="image" class="topImg" style="width:350px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
-                             <p>4.	Now Open the Techforce.ai studio with administrator permissions, </p>
-                             <img src="{{ '/assets/images/doc-img52.png' | relative_url }}"alt="image" class="topImg" style="width:300px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
-
-                             <p>5.	Windows will ask for permissions, click on Yes.</p>
-                            <p>6.	click on the system tray icon on the taskbar, </p>
-                             <img src="{{ '/assets/images/doc-img53.png' | relative_url }}"alt="image" class="topImg" style="width:300px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
-                             <p>7.	we can find the techforce.ai studio icon, right click on the icon, select settings, select register</p>
-                             <img src="{{ '/assets/images/doc-img54.png' | relative_url }}"alt="image" class="topImg" style="width:300px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
-                             <p>8.	The below shown window will be opened, provide the details and submit, so that a worker will be created for the account.</p>
-                             <img src="{{ '/assets/images/doc-img55.png' | relative_url }}"alt="image" class="topImg" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
-                             <p>9.	 Open the Login page and enter the credentials and click on the submit button and the following screen will be displayed.</p>
-                             <img src="{{ '/assets/images/doc-img56.png' | relative_url }}"alt="image" class="topImg" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
-                             <p>10.	 Click on the Worker to see the registered worker details</p>
-                             <img src="{{ '/assets/images/doc-img57.png' | relative_url }}"alt="image" class="topImg" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
-                             <p>The worker is added an the eManager-Console is ready to Upload, Schedule and execute the action flows.</p>
+                             
                            </div>
 
                            <div id="ProcessManagement"  class="page-section">
