--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -811,7 +811,7 @@
                                   <p><span class="numbers">9.</span> Publish option in Studio to publish Action Flows to eManager console</p>
                             </div>
 
-                         <div id="download3"  class="page-section">
+                         <div id="Techforce"  class="page-section">
                              <h3><span class="numbers">3.</span>Techforce.ai Studio Guide</h3>
                           </div>
 
@@ -855,7 +855,7 @@
 
                            <div id="InstallationInstructions"  class="page-section">
                                <h4 class="purple"><span class="numbers">3.1.3</span> Installation Instructions</h4>
-                             <h4>Installing RPA Studio</h4>
+                             <h5>Installing RPA Studio</h5>
                              <ol>
                              <li><span class="numbers">1.</span>After downloading the RPA studio, move the downloaded studio.exe file to the desired folder where it needs to be installed.</li>
                              <li><span class="numbers">2.</span>Right-click on the installer and select “Run as administrator” so that RPA studio will have “Admin” privileges</li>
@@ -877,7 +877,7 @@
 
                           </div>
                           <div id="InstallingTechforceOCR"  class="page-section">
-                              <h4 class="orange"><span class="numbers">3.1.4</span>  Installing Techforce OCR</h4>
+                              <h4 class="purple"><span class="numbers">3.1.4</span>  Installing Techforce OCR</h4>
                             <p>Techforce OCR needs 164MB of hard disk space for installation.</p>
                             <ol>
                             <li><span class="numbers">1.</span>In the first screen of Techforce OCR installation, select preferred language, and click “OK” which will start the installation of Techforce OCR.</li>
