--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -556,7 +556,7 @@
                                 </ul>
                             </li>
                            <li class="subMenu">
-                                <a href="Techforce"  class="heading"><span class="numbers">3.</span>Techforce.ai Studio Guide</a>
+                                <a href="#Techforce"  class="heading"><span class="numbers">3.</span>Techforce.ai Studio Guide</a>
                                 <ul class="collapse list-unstyled collapse-2">
                                     <li><a class="child 2" href="#Installation"><span class="numbers">3.1</span>Installation</a>
                                         <ul>
@@ -788,7 +788,7 @@
                           </div>
 
                           <div id="ReleaseNotes"  class="page-section">
-                                  <h3>2.</span> Release Notes</h3>
+                            <h3>2.</span> Release Notes</h3>
                             </div>
 
                             <div id="Patches"  class="page-section">
