--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2121,15 +2121,15 @@
                               <h4 class="skyBlue">4.1 Register with eManager console</h4>
                               <h5>Worker creation:</h5>
                               <p><span class="numbers">1.</span>To Register into eManager-Console, go to<a href="https://www.techforce.ai"> https://www.techforce.ai </a>choose your plan.</p>
-                              <img src="{{ '/assets/images/doc-img44.png' | relative_url }}"alt="image" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                              <img src="{{ '/assets/images/doc-img44.png' | relative_url }}"alt="image" style="width:400px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
                               <p><span class="numbers">2.</span>	Fill your details and submit.</p>
-                              <img src="{{ '/assets/images/doc-img45.png' | relative_url }}"alt="image" class="topImg" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                              <img src="{{ '/assets/images/doc-img45.png' | relative_url }}"alt="image" class="topImg" style="width:400px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
                               <p><span class="numbers">3.</span>3.	Upon successful registration, you will be redirected to the login page.</p>
 
-                              <img src="{{ '/assets/images/doc-img46.png' | relative_url }}"alt="image" class="topImg" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                              <img src="{{ '/assets/images/doc-img46.png' | relative_url }}"alt="image" class="topImg" style="width:400px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
 
                               <p><span class="numbers">4.</span>4.	You will be prompted to verify your email on first login. Go to your registered email and Click on the verification link to complete the email verification process.</p>
-                              <img src="{{ '/assets/images/doc-img47.png' | relative_url }}"alt="image" class="topImg" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                              <img src="{{ '/assets/images/doc-img47.png' | relative_url }}"alt="image" class="topImg" style="width:400px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
                               <p><span class="numbers">5.</span>5.	Once you're done with the verifiation process you will be redirected to the eManager -Console homepage page.</p>
 
                            </div>
@@ -2137,19 +2137,19 @@
                            <div id="Login"  class="page-section">
                              <h4 class="skyBlue">4.2 Login</h4>
                                <p>1.	To Login into eManager – Console</p>
-                               <img src="{{ '/assets/images/doc-img48.png' | relative_url }}"alt="image" class="topImg" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                               <img src="{{ '/assets/images/doc-img48.png' | relative_url }}"alt="image" class="topImg" style="width:400px; margin-left:20px;margin-top:10px;margin-bottom:10px;">
                                <p>2.	Enter the credentials and click on the login button, you can see Business Process, Workers, Queues, Schedules, and Secret Vault in the left menu</p>
                                <p>3.	Business Process tab shows the list of action flows published to the eManager console.</p>
-                               <img src="{{ '/assets/images/doc-img49.png' | relative_url }}"alt="image" class="topImg" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                               <img src="{{ '/assets/images/doc-img49.png' | relative_url }}"alt="image" class="topImg" style="width: 400px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
                                <p>4.	Workers tab lists the workers registered with the eManager console. Worker contains the required runtime to execute the action flows that are published to eManager console.   </p>
-                               <img src="{{ '/assets/images/doc-img50.png' | relative_url }}"alt="image" class="topImg" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                               <img src="{{ '/assets/images/doc-img50.png' | relative_url }}"alt="image" class="topImg" style="width:400px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
                                <p>5.	 Queues shows the current and pending tasks waiting for the execution in the worker.   </p>
-                               <img src="{{ '/assets/images/doc-img51.png' | relative_url }}"alt="image" class="topImg" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                               <img src="{{ '/assets/images/doc-img51.png' | relative_url }}"alt="image" class="topImg" style="width:400px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
                                <p>6.	 Schedules functionality is, to schedule/execute action flows repetitively on a timely basis, like Minutes, Hourly, Daily, Weekly, Monthly or Advanced,</p>
-                               <img src="{{ '/assets/images/doc-img52.png' | relative_url }}"alt="image" class="topImg" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                               <img src="{{ '/assets/images/doc-img52.png' | relative_url }}"alt="image" class="topImg" style="width:400px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
                                <p>7.	Secret Vault is used to store the sensitive information such as credentials, tokens, keys etc. It supports different types of assets like Text, Boolean, Integer, and Credentials.</p>
-                               <img src="{{ '/assets/images/doc-img53.png' | relative_url }}"alt="image" class="topImg" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
-                               
+                               <img src="{{ '/assets/images/doc-img53.png' | relative_url }}"alt="image" class="topImg" style="width:400px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
+
                            </div>
 
                            <div id="ProcessManagement"  class="page-section">
