--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2159,11 +2159,11 @@
                              <img src="{{ '/assets/images/doc-img58.png' | relative_url }}"alt="image" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
                              <h5>Executing a Business Process:</h5>
                              <p>2.In the business process page, upload the RPA flow and execute the flow by clicking on the PLAY button from the UI. After clicking on the play button, the below image will appear.</p>
-                             <img src="{{ '/assets/images/doc-img59.png' | relative_url }}"alt="image" class="topImg" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                             <img src="{{ '/assets/images/doc-img59.png' | relative_url }}"alt="image" class="topImg" style="width:400px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
                              <p>3. Select the Execution target Type like Reserved. If the execution type is selected as reserved, then specify the Worker.</p>
-                             <img src="{{ '/assets/images/doc-img60.png' | relative_url }}"alt="image" class="topImg" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                             <img src="{{ '/assets/images/doc-img60.png' | relative_url }}"alt="image" class="topImg" style="width:400px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
 
-                             <img src="{{ '/assets/images/doc-img61.png' | relative_url }}"alt="image" class="topImg" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                             <img src="{{ '/assets/images/doc-img61.png' | relative_url }}"alt="image" class="topImg" style="width:400px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
                              <p>Note: In on-premise the processes are called “Business Process”.</p>
                           </div>
 
@@ -2197,19 +2197,19 @@
                           <p>The main functionality of the Secret Vault is to create the values that are not to be shared or shown to others.</p>
                           <img src="{{ '/assets/images/doc-img67.png' | relative_url }}"alt="image" class="topImg" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
                           <p>To create a secret vault click on the create button. A secret vault can be created with different types like Integer, Boolean, Text, and Credentials</p>
-                          <img src="{{ '/assets/images/doc-img68.png' | relative_url }}"alt="image" class="topImg" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                          <img src="{{ '/assets/images/doc-img68.png' | relative_url }}"alt="image" class="topImg" style="width: 400px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
                           <h5>Text:</h5>
                           <p>To create a new text secret after clicking on the create button, give a name to the secret to be saved as per the name. If the Type selected is “Text”. In the value field pass the text value, then the value will be passed as text to the RPA flow.</p>
-                          <img src="{{ '/assets/images/doc-img69.png' | relative_url }}"alt="image" class="topImg" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                          <img src="{{ '/assets/images/doc-img69.png' | relative_url }}"alt="image" class="topImg" style="width: 400px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
                           <h5>Boolean:</h5>
                           <p>To create a new Boolean secret after clicking on the create button, give a name to the secret to be saved as per the name. If the Type selected is Boolean. In the value field select the value as either true or false from the available buttons, the value will be passed as Boolean to the RPA flow.</p>
-                          <img src="{{ '/assets/images/doc-img70.png' | relative_url }}"alt="image" class="topImg" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                          <img src="{{ '/assets/images/doc-img70.png' | relative_url }}"alt="image" class="topImg" style="width: 400px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
                           <h5> Integer:</h5>
                           <p>To create a new integer secret after clicking on the create button, give a name to the secret to be saved as per the name. If the Type selected is INTEGER, In the value field pass the integer value then the value will be passed as integer to the RPA flow.</p>
-                          <img src="{{ '/assets/images/doc-img71.png' | relative_url }}"alt="image" class="topImg" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                          <img src="{{ '/assets/images/doc-img71.png' | relative_url }}"alt="image" class="topImg" style="width: 400px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
                           <h5> Credentials:</h5>
                           <p>To create a new credential secret after clicking on the create button, give a name to the secret to be saved as per the name. If the Type selected is Credentials, In the Username field pass the username value and, in the password, field pass the password of the username which will be entered in secure format and will never be shown to any other user. These saved credentials can be passed into the RPA action flows.</p>
-                          <img src="{{ '/assets/images/doc-img72.png' | relative_url }}"alt="image" class="topImg" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                          <img src="{{ '/assets/images/doc-img72.png' | relative_url }}"alt="image" class="topImg" style="width: 400px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
                         </div>
 
                         <div id="Schedules"  class="page-section">
