css changes indoc to pavna

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -863,15 +863,15 @@
                              <img src="{{ '/assets/images/doc-img1.png' | relative_url }}" alt="image" style="border:1px solid green;margin-left:20px;margin-top:10px;margin-bottom:10px;">
                              <li><span class="numbers">3.</span>Windows will ask for permission stating “Do you want to allow the unknown publisher to install the application”. Click YES, and the installation process will start.</li>
                              <li><span class="numbers">4.</span>Accept the license agreement of Techforce.ai to proceed for the further installation process.</li>
-                             <img src="{{ '/assets/images/doc-img2.png' | relative_url }}" alt="image" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                             <img src="{{ '/assets/images/doc-img2.png' | relative_url }}" alt="image" style="width:400px;border:1px solid green;margin-left:20px;margin-top:10px;margin-bottom:10px;">
                              <p>The installation process will show the folder selection screen.</p>
                              <li><span class="numbers">5.</span>Click on BROWSE and select a folder which does not contain a space in its name like shown in the image.</li>
-                             <img src="{{ '/assets/images/doc-img3.png' | relative_url }}" alt="image" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                             <img src="{{ '/assets/images/doc-img3.png' | relative_url }}" alt="image" style="width:400px;border:1px solid green;margin-left:20px;margin-top:10px;margin-bottom:10px;">
                              <li><span class="numbers">6.</span>After selecting the folder, click on “INSTALL” which will start installing RPA studio.</li>
-                             <img src="{{ '/assets/images/doc-img4.png' | relative_url }}" alt="image" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                             <img src="{{ '/assets/images/doc-img4.png' | relative_url }}" alt="image" style="width:400px;border:1px solid green;margin-left:20px;margin-top:10px;margin-bottom:10px;">
                              <p>TIP: On the folder selection screen, make sure to select a folder, which does not contain any space in the folder name. If the selected folder contains any space in its name, then the RPA scripts built using the studio cannot be executed.</p>
                              <li><span class="numbers">7.</span>The installation will take a bit time, and after installing the Studio, click on CLOSE button to proceed for further process</li>
-                             <img src="{{ '/assets/images/doc-img5.png' | relative_url }}" alt="image" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                             <img src="{{ '/assets/images/doc-img5.png' | relative_url }}" alt="image" style="width:400px;border:1px solid green;margin-left:20px;margin-top:10px;margin-bottom:10px;">
                              </ol>
 
 
@@ -881,23 +881,23 @@
                             <p>Techforce OCR needs 164MB of hard disk space for installation.</p>
                             <ol>
                             <li><span class="numbers">1.</span>In the first screen of Techforce OCR installation, select preferred language, and click “OK” which will start the installation of Techforce OCR.</li>
-                             <img src="{{ '/assets/images/doc-img6.png' | relative_url }}" alt="image" style="margin-left:20px;margin-top:10px;margin-bottom:10px;" >
+                             <img src="{{ '/assets/images/doc-img6.png' | relative_url }}" alt="image" style="width:400px;border:1px solid green;margin-left:20px;margin-top:10px;margin-bottom:10px;" >
                             <li><span class="numbers">2.</span>In the next screen of OCR installation, click NEXT to continue the installation process.</li>
 
                             <li><span class="numbers">3.</span>Accept the license agreement of Techforce OCR to continue the installation process.</li>
-                            <img src="{{ '/assets/images/doc-img7.png' | relative_url }}" alt="image" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img7.png' | relative_url }}" alt="image" style="width:400px;border:1px solid green;margin-left:20px;margin-top:10px;margin-bottom:10px;">
                             <li><span class="numbers">4.</span>After accepting the agreement, specify/select who should have the user level access to OCR Select appropriately from.</li>
                               <p>“Install for anyone using this computer or Install just for me”.</p>
-                            <img src="{{ '/assets/images/doc-img8.png' | relative_url }}" alt="image" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img8.png' | relative_url }}" alt="image" style="width:400px;border:1px solid green;margin-left:20px;margin-top:10px;margin-bottom:10px;">
 
                             <li><span class="numbers">5.</span>Select any one of the options and click on NEXT button. In the next screen choose the components that are to be installed or else just click on NEXT to continue the installation process.</li>
-                            <img src="{{ '/assets/images/doc-img9.png' | relative_url }}" alt="image" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img9.png' | relative_url }}" alt="image" style="width:400px;border:1px solid green;margin-left:20px;margin-top:10px;margin-bottom:10px;">
                             <li><span class="numbers">6.</span>After selecting the components, the installation process will show the folder path selection. Keep the default storage space or else specify the installation folder.</li>
-                            <img src="{{ '/assets/images/doc-img10.png' | relative_url }}" alt="image" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img10.png' | relative_url }}" alt="image" style="width:400px;border:1px solid green;margin-left:20px;margin-top:10px;margin-bottom:10px;">
 
                             <li><span class="numbers">7.</span>Select the options for start menu action and then click on Install to.</li>
                             <li><span class="numbers">8.</span>After installation, click on NEXT button and then click on FINISH button to complete the RPA Studio installation</li>
-                            <img src="{{ '/assets/images/doc-img11.png' | relative_url }}" alt="image" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img11.png' | relative_url }}" alt="image" style="width:400px;border:1px solid green;margin-left:20px;margin-top:10px;margin-bottom:10px;">
                             </ol>
 
 
@@ -907,23 +907,23 @@
                              <h4 class="red"><span class="numbers">3.1.5</span>  Un-install Instructions</h4>
                            <p>To uninstall the techforce.ai studio</p>
                            <p>Go to the Control panel and click on Uninstall a program.</p>
-                           <img src="{{ '/assets/images/doc-img12.png' | relative_url }}" alt="image" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                           <img src="{{ '/assets/images/doc-img12.png' | relative_url }}" alt="image" style="width:400px;border:1px solid green;margin-left:20px;margin-top:10px;margin-bottom:10px;">
                            <p>Now Select Techforce.ai studio, right click on it and click on uninstall.</p>
-                           <img src="{{ '/assets/images/doc-img13.png' | relative_url }}" alt="image" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                           <img src="{{ '/assets/images/doc-img13.png' | relative_url }}" alt="image" style="width:400px;border:1px solid green;margin-left:20px;margin-top:10px;margin-bottom:10px;">
                            <p>Now the Techforce.ai studio will ask for permissions to uninstall, click on yes.</p>
                            <p>The uninstall process will start, it will take some time to uninstall.</p>
                            <p>After the process is done click on close.</p>
                            <p>We also need to uninstall the dependencies, so back to the control panel, Select the Techforce.ai OCR engine, right click and click on uninstall.</p>
-                           <img src="{{ '/assets/images/doc-img14.png' | relative_url }}" alt="image" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                           <img src="{{ '/assets/images/doc-img14.png' | relative_url }}" alt="image" style="width:400px;border:1px solid green;margin-left:20px;margin-top:10px;margin-bottom:10px;">
                            <p>A pop will be opened and will ask for permission to uninstall the Tecforce.ai OCR.</p>
                            <p>Click on yes, and another pop up will be displayed to select language.</p>
                            <p>Click on ok, and the uninstall process will start.</p>
                            <p>After the process is completed click on finish.</p>
                            <p>Now once check the folder where Techforce.ai studio is installed, sometimes all the files would not be deleted.</p>
                            <p>In such cases, go to task manager, In Process, search for “Electron” process.</p>
-                            <img src="{{ '/assets/images/doc-img15.png' | relative_url }}" alt="image" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img15.png' | relative_url }}" alt="image" style="width:400px;border:1px solid green;margin-left:20px;margin-top:10px;margin-bottom:10px;">
                            <p>Select the Process and click on the end task.</p>
-                            <img src="{{ '/assets/images/doc-img16.png' | relative_url }}" alt="image" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img16.png' | relative_url }}" alt="image" style="width:400px;border:1px solid green;margin-left:20px;margin-top:10px;margin-bottom:10px;">
                            <p>Now, go back to the folder path and delete the files, all the files would be deleted.</p>
                          </div>
 
@@ -934,7 +934,7 @@
                            <div id="Menu"  class="page-section">
                                <h4 class="green">3.3 Menu Options</h4>
                                <p>Techforce.ai RPA Studio Menu bar contains File Tab and Record Tab. The menu toolbar contains the following New, Open, Save, Record, Clear, Publish, Settings, Stop and Play functionalities. Menu bars are very common and easy to find. They help in the efficient use of space.</p>
-                               <img src="{{ '/assets/images/doc-img17.png' | relative_url }}" alt="image" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                               <img src="{{ '/assets/images/doc-img17.png' | relative_url }}" alt="image" style="width:400px;border:1px solid green;margin-left:20px;margin-top:10px;margin-bottom:10px;">
                                <p><span class="numbers">Figure 2: </span>  Menu Panel</p>
                                <ol>
                                  <li><span class="numbers">1.</span><strong> File Tab:</strong></li>
