--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -860,10 +860,10 @@
                              <li><span class="numbers">1.</span>After downloading the RPA studio, move the downloaded studio.exe file to the desired folder where it needs to be installed.</li>
                              <li><span class="numbers">2.</span>Right-click on the installer and select “Run as administrator” so that RPA studio will have “Admin” privileges</li>
                              <p>The following image is an example of how to run as administrator.</p>
-                             <img src="{{ '/assets/images/doc-img1.png' | relative_url }}" alt="image" style="border:1px solid green;margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                             <img src="{{ '/assets/images/doc-img1.png' | relative_url }}" alt="image" style="width:400px;text-align:center;border:1px solid green;margin-left:20px;margin-top:10px;margin-bottom:10px;">
                              <li><span class="numbers">3.</span>Windows will ask for permission stating “Do you want to allow the unknown publisher to install the application”. Click YES, and the installation process will start.</li>
                              <li><span class="numbers">4.</span>Accept the license agreement of Techforce.ai to proceed for the further installation process.</li>
-                             <img src="{{ '/assets/images/doc-img2.png' | relative_url }}" alt="image" style="width:400px;border:1px solid green;margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                             <img src="{{ '/assets/images/doc-img2.png' | relative_url }}" alt="image" style="width:400px;text-align:center;border:1px solid green;margin-left:20px;margin-top:10px;margin-bottom:10px;">
                              <p>The installation process will show the folder selection screen.</p>
                              <li><span class="numbers">5.</span>Click on BROWSE and select a folder which does not contain a space in its name like shown in the image.</li>
                              <img src="{{ '/assets/images/doc-img3.png' | relative_url }}" alt="image" style="width:400px;border:1px solid green;margin-left:20px;margin-top:10px;margin-bottom:10px;">
@@ -942,7 +942,7 @@
                                  <li><stong> Exit:</strong> Exit is used to close the Techforce.ai RPA Studio.</li>
                                  <li><stong> Save:</strong> It is used to save an RPA action flow with a name. The shortcut is Ctrl+S.</li>
                                  <li><stong> Save As:</strong> It is used to save an already saved document with a new name. The shortcut is Ctrl+Shift+S.</li>
-                                 <img src="{{ '/assets/images/doc-img18.png' | relative_url }}" alt="image" style="width:300px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                                 <img src="{{ '/assets/images/doc-img18.png' | relative_url }}" alt="image" style="width:300px;border:1px solid green;margin-left:20px;margin-top:10px;margin-bottom:10px;">
                                  <p><span class="numbers">Figure 3: </span>   File Tab</p>
                                  <li><span class="numbers">2.</span><strong> Help Tab:</strong></li>
                                  <li>The help tab displays the installed version of the studio. </li>
@@ -951,7 +951,7 @@
                           <div id="New"  class="page-section">
                             <h4 class="purple">3.3.1 New</h4>
                             <p>Used to create a new RPA scripting File (BOT) into the respected folder. The user can start a new project from predefined templates.</p>
-                            <img src="{{ '/assets/images/doc-img19.png' | relative_url }}" alt="image" style="width:100px;margin-top:10px;margin-left:20px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img19.png' | relative_url }}" alt="image" style="width:100px;border:1px solid green;text-align:center;margin-top:10px;margin-left:20px;margin-bottom:10px;">
                             <p><span class="numbers">Figure 5: </span> Studio New</p>
                           </div>
                           <div id="Open"  class="page-section">
@@ -961,7 +961,7 @@
                             <p><span class="numbers">Figure 6: </span>  Open</p>
                           </div>
                           <div id="Save"  class="page-section">
-                            <h4 class="orange">3.3.3 Save</h4>
+                            <h4 class="purple">3.3.3 Save</h4>
                             <p>Used to save the created script or Modified Script. It is used to save an RPA task with a name. Shortcut is Ctrl+S.</p>
                             <img src="{{ '/assets/images/doc-img21.png' | relative_url }}" alt="image" style="width:100px;margin-top:10px;margin-left:20px;margin-bottom:10px;">
                             <p><span class="numbers">Figure 7: </span>  Save</p>
