--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2123,15 +2123,15 @@
                               <h4 class="skyBlue">4.1 Register with eManager console</h4>
                               <h5>Worker creation:</h5>
                               <p><span class="numbers">1.</span>To Register into eManager-Console, go to<a href="https://www.techforce.ai"> https://www.techforce.ai </a>choose your plan.</p>
-                              <img src="{{ '/assets/images/doc-img44.png' | relative_url }}"alt="image" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                              <img src="{{ '/assets/images/doc-img44.png' | relative_url }}"alt="image" style=" border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
                               <p><span class="numbers">2.</span>	Fill your details and submit.</p>
-                              <img src="{{ '/assets/images/doc-img45.png' | relative_url }}"alt="image" class="topImg" style="width:400px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                              <img src="{{ '/assets/images/doc-img45.png' | relative_url }}"alt="image" class="topImg" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
                               <p><span class="numbers">3.</span>	Upon successful registration, you will be redirected to the login page.</p>
 
-                              <img src="{{ '/assets/images/doc-img46.png' | relative_url }}"alt="image" class="topImg" style="width:400px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                              <img src="{{ '/assets/images/doc-img46.png' | relative_url }}"alt="image" class="topImg" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
 
                               <p><span class="numbers">4.</span>	You will be prompted to verify your email on first login. Go to your registered email and Click on the verification link to complete the email verification process.</p>
-                              <img src="{{ '/assets/images/doc-img47.png' | relative_url }}"alt="image" class="topImg" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                              <img src="{{ '/assets/images/doc-img47.png' | relative_url }}"alt="image" class="topImg" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
                               <p><span class="numbers">5.</span>	Once you're done with the verifiation process you will be redirected to the eManager -Console homepage page.</p>
 
                            </div>
@@ -2139,18 +2139,18 @@
                            <div id="Login"  class="page-section">
                              <h4 class="skyBlue">4.2 Login</h4>
                                <p>1.	To Login into eManager – Console</p>
-                               <img src="{{ '/assets/images/doc-img48.png' | relative_url }}"alt="image" class="topImg" style="width:400px; margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                               <img src="{{ '/assets/images/doc-img48.png' | relative_url }}"alt="image" class="topImg" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
                                <p>2.	Enter the credentials and click on the login button, you can see Business Process, Workers, Queues, Schedules, and Secret Vault in the left menu</p>
                                <p>3.	Business Process tab shows the list of action flows published to the eManager console.</p>
-                               <img src="{{ '/assets/images/doc-img49.png' | relative_url }}"alt="image" class="topImg" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                               <img src="{{ '/assets/images/doc-img49.png' | relative_url }}"alt="image" class="topImg" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
                                <p>4.	Workers tab lists the workers registered with the eManager console. Worker contains the required runtime to execute the action flows that are published to eManager console.   </p>
-                               <img src="{{ '/assets/images/doc-img50.png' | relative_url }}"alt="image" class="topImg" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                               <img src="{{ '/assets/images/doc-img50.png' | relative_url }}"alt="image" class="topImg" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
                                <p>5.	 Queues shows the current and pending tasks waiting for the execution in the worker.   </p>
-                               <img src="{{ '/assets/images/doc-img51.png' | relative_url }}"alt="image" class="topImg" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                               <img src="{{ '/assets/images/doc-img51.png' | relative_url }}"alt="image" class="topImg" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
                                <p>6.	 Schedules functionality is, to schedule/execute action flows repetitively on a timely basis, like Minutes, Hourly, Daily, Weekly, Monthly or Advanced,</p>
-                               <img src="{{ '/assets/images/doc-img52.png' | relative_url }}"alt="image" class="topImg" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                               <img src="{{ '/assets/images/doc-img52.png' | relative_url }}"alt="image" class="topImg" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
                                <p>7.	Secret Vault is used to store the sensitive information such as credentials, tokens, keys etc. It supports different types of assets like Text, Boolean, Integer, and Credentials.</p>
-                               <img src="{{ '/assets/images/doc-img53.png' | relative_url }}"alt="image" class="topImg" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                               <img src="{{ '/assets/images/doc-img53.png' | relative_url }}"alt="image" class="topImg" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
 
                            </div>
 
@@ -2158,14 +2158,14 @@
                              <h4 class="skyBlue">4.3 Process Management</h4>
                              <h5>Adding the Business Process</h5>
                              <p>1. After login into the EM Console account, gets redirected to the Business Process screen. Here upload the RPA script Zip file into the Business Process using the available “Upload” button on the top right of the screen. After uploading, execute the flow.</p>
-                             <img src="{{ '/assets/images/doc-img58.png' | relative_url }}"alt="image" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                             <img src="{{ '/assets/images/doc-img58.png' | relative_url }}"alt="image" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
                              <h5>Executing a Business Process:</h5>
                              <p>2.In the business process page, upload the RPA flow and execute the flow by clicking on the PLAY button from the UI. After clicking on the play button, the below image will appear.</p>
-                             <img src="{{ '/assets/images/doc-img59.png' | relative_url }}"alt="image" class="topImg" style="width:400px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                             <img src="{{ '/assets/images/doc-img59.png' | relative_url }}"alt="image" class="topImg" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
                              <p>3. Select the Execution target Type like Reserved. If the execution type is selected as reserved, then specify the Worker.</p>
-                             <img src="{{ '/assets/images/doc-img60.png' | relative_url }}"alt="image" class="topImg" style="width:400px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                             <img src="{{ '/assets/images/doc-img60.png' | relative_url }}"alt="image" class="topImg" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
 
-                             <img src="{{ '/assets/images/doc-img61.png' | relative_url }}"alt="image" class="topImg" style="width:400px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                             <img src="{{ '/assets/images/doc-img61.png' | relative_url }}"alt="image" class="topImg" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
                              <p>Note: In on-premise the processes are called “Business Process”.</p>
                           </div>
 
@@ -2173,10 +2173,10 @@
                             <h4 class="skyBlue">4.4 Worker Management</h4>
 
                             <p>1.The main functionality of a worker is to execute the flows/business processes that are uploaded in the business process page. So, after adding the worker while executing the business process, select the worker that was created in worker screen. Below is the image for creating a worker.</p>
-                            <img src="{{ '/assets/images/doc-img62.png' | relative_url }}"alt="image" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img62.png' | relative_url }}"alt="image" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
 
                             <p>2.After creating the worker the details of the worker like name, host and so on can be seen and the worker RDP details will be sent via an email.</p>
-                            <img src="{{ '/assets/images/doc-img63.png' | relative_url }}"alt="image" class="topImg" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img63.png' | relative_url }}"alt="image" class="topImg" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
                              <h5>Worker Categories</h5>
                             <p>Worker category is the type of worker that is going to be registered. Currently, only “Reserved” type can be created as a worker.</p>
                             <h5>Reserved</h5>
@@ -2186,38 +2186,38 @@
                          <div id="Queues"  class="page-section">
                            <h4 class="skyBlue">4.5 Queues</h4>
                            <p>Queues is the functionality where the status of currently executing bots/workers status and scheduled workers execution status can be seen.</p>
-                            <img src="{{ '/assets/images/doc-img64.png' | relative_url }}"alt="image" class="topImg" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img64.png' | relative_url }}"alt="image" class="topImg" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
                             <p>Select the worker to check the action flows to be executed in the worker environment.</p>
-                            <img src="{{ '/assets/images/doc-img65.png' | relative_url }}"alt="image" class="topImg" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img65.png' | relative_url }}"alt="image" class="topImg" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
                             <p>After selecting the worker the action flows to be executed can be seen as below.</p>
-                            <img src="{{ '/assets/images/doc-img66.png' | relative_url }}"alt="image" class="topImg" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img66.png' | relative_url }}"alt="image" class="topImg" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
                             <p>Note: On-premise the Worker List is called as “Queues”</p>
                         </div>
 
                         <div id="SecretVault"  class="page-section">
                           <h4 class="skyBlue">4.6 Secret Vault</h4>
                           <p>The main functionality of the Secret Vault is to create the values that are not to be shared or shown to others.</p>
-                          <img src="{{ '/assets/images/doc-img67.png' | relative_url }}"alt="image" class="topImg" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                          <img src="{{ '/assets/images/doc-img67.png' | relative_url }}"alt="image" class="topImg" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
                           <p>To create a secret vault click on the create button. A secret vault can be created with different types like Integer, Boolean, Text, and Credentials</p>
-                          <img src="{{ '/assets/images/doc-img68.png' | relative_url }}"alt="image" class="topImg" style="width: 400px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                          <img src="{{ '/assets/images/doc-img68.png' | relative_url }}"alt="image" class="topImg" style="width: 400px;border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
                           <h5>Text:</h5>
                           <p>To create a new text secret after clicking on the create button, give a name to the secret to be saved as per the name. If the Type selected is “Text”. In the value field pass the text value, then the value will be passed as text to the RPA flow.</p>
-                          <img src="{{ '/assets/images/doc-img69.png' | relative_url }}"alt="image" class="topImg" style="width: 400px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                          <img src="{{ '/assets/images/doc-img69.png' | relative_url }}"alt="image" class="topImg" style="width: 400px;border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
                           <h5>Boolean:</h5>
                           <p>To create a new Boolean secret after clicking on the create button, give a name to the secret to be saved as per the name. If the Type selected is Boolean. In the value field select the value as either true or false from the available buttons, the value will be passed as Boolean to the RPA flow.</p>
-                          <img src="{{ '/assets/images/doc-img70.png' | relative_url }}"alt="image" class="topImg" style="width: 400px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                          <img src="{{ '/assets/images/doc-img70.png' | relative_url }}"alt="image" class="topImg" style="width: 400px;border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
                           <h5> Integer:</h5>
                           <p>To create a new integer secret after clicking on the create button, give a name to the secret to be saved as per the name. If the Type selected is INTEGER, In the value field pass the integer value then the value will be passed as integer to the RPA flow.</p>
-                          <img src="{{ '/assets/images/doc-img71.png' | relative_url }}"alt="image" class="topImg" style="width: 400px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                          <img src="{{ '/assets/images/doc-img71.png' | relative_url }}"alt="image" class="topImg" style="width: 400px;border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
                           <h5> Credentials:</h5>
                           <p>To create a new credential secret after clicking on the create button, give a name to the secret to be saved as per the name. If the Type selected is Credentials, In the Username field pass the username value and, in the password, field pass the password of the username which will be entered in secure format and will never be shown to any other user. These saved credentials can be passed into the RPA action flows.</p>
-                          <img src="{{ '/assets/images/doc-img72.png' | relative_url }}"alt="image" class="topImg" style="width: 400px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                          <img src="{{ '/assets/images/doc-img72.png' | relative_url }}"alt="image" class="topImg" style="width: 400px;border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
                         </div>
 
                         <div id="Schedules"  class="page-section">
                           <h4 class="skyBlue">4.7 Schedules</h4>
                           <p>The main functionality of scheduling is, to schedule/execute RPA flows whenever required. After uploading a business process/RPA flow, schedule those flows. To schedule a flow first a “Schedule” should be created.</p>
-                          <img src="{{ '/assets/images/doc-img73.png' | relative_url }}"alt="image" class="topImg"  style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                          <img src="{{ '/assets/images/doc-img73.png' | relative_url }}"alt="image" class="topImg"  style="width: 400px;border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
                           <p>To create a “Schedule”, navigate to “Schedules” page, and click on “Create” button to start adding a new schedule. </p>
                           <h5> Name</h5>
                           <p>Give a name to the schedule</p>
@@ -2446,7 +2446,7 @@
                             <p>Most RPA tools allow you to extract text from desktop or web applications, either natively or using an OCR engine. If you are using the latter, do be mindful that OCR is not hundred per cent accurate. In cases where accuracy is important, you might not want to rely solely on OCR.</p>
                             <p>13.	Problems are common</p>
                             <p>14You are not alone that facing the problems/issues. Developers likely to encounter some seemingly “insurmountable” problems during the development stage. It is highly likely that someone else have encountered the same problem and found a solution for it.</p>
-                            <p>15Check out for the solution in the Techforce forum using the URL below.</p>
+                            <p>15.Check out for the solution in the Techforce forum using the URL below.</p>
                             <p>16.forum.techforce.ai</p>
                             <p>17.Couldn't find the solution yet?</p>
                             <p>18.Don't worry. Our expert’s team will guide on how to solve the problem, Post your question in Forum</p>
