--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2123,7 +2123,7 @@
                               <h4 class="skyBlue">4.1 Register with eManager console</h4>
                               <h5>Worker creation:</h5>
                               <p><span class="numbers">1.</span>To Register into eManager-Console, go to<a href="https://www.techforce.ai"> https://www.techforce.ai </a>choose your plan.</p>
-                              <img src="{{ '/assets/images/doc-img44.png' | relative_url }}"alt="image" style=" border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                              <img src="{{ '/assets/images/doc-img44.png' | relative_url }}"alt="image" style=" border: 1px solid green;margin-top:10px;margin-bottom:10px;">
                               <p><span class="numbers">2.</span>	Fill your details and submit.</p>
                               <img src="{{ '/assets/images/doc-img45.png' | relative_url }}"alt="image" class="topImg" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
                               <p><span class="numbers">3.</span>	Upon successful registration, you will be redirected to the login page.</p>
